# accumulators

./: CMakeLists.txt
